--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000,
-CONNECTION_STRING = mongodb+srv://admin:admin@mycontacts.lcbszyg.mongodb.net/mycontacts-backend?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://<username>:<password>@mycontacts.lcbszyg.mongodb.net/mycontacts-backend?retryWrites=true&w=majority
 ACCESS_TOKEN_SECRET = crypt256
